# template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Jenkinsfile  LICENCE.md  README.md
src/: main.c  ut.c
src/hello/: CMakeLists.txt  hello.c  hello.h
